2003-09-23  Sven Neumann  <sven@gimp.org>

	* rsvg.c (rsvg_start_svg): respect viewBox offsets by applying an
	appropriate translation.

2003-09-21  Tor Lillqvist  <tml@iki.fi>

	* librsvg-zip.in: New file.

	* configure.in: Check for Win32, set OS_WIN32 automake
	variable. Check for strtok_r. Expand librsvg-zip.

	* Makefile.am: Use -lm only on Unix. Add LIBGSF_LIBS and
	LIBCROCO_LIBS to librsvg_2_la_LIBADD. Distribute librsvg-zip.in.

	* rsvg-css.c: Use G_PI instead of M_PI.
	(strtok_r): Implement strtok_r here if not available. (Very
	suboptimal implementation.)

2003-09-19  Sven Neumann  <sven@gimp.org>

	* rsvg-file-util.c: implemented missing GError handling for file
	operations.

2003-09-18  Sven Neumann  <sven@gimp.org>

	* Makefile.am
	* configure.in
	* gimp-plugin/Makefile.am
	* gimp-plugin/svg.c: removed GIMP plug-in; it now lives in the
	GIMP source tree. Thanks a lot for the nice work you've done!

2003-09-12  Sven Neumann  <sven@gimp.org>

	* configure.in
	* rsvg-styles.c (rsvg_real_parse_cssbuffer): removed the #warning
	here and instead output it when configure is run (bug #122119).

2003-09-12  Sven Neumann  <sven@gimp.org>

	* configure.in: depend on Pango version 1.2.0 or newer.

	* rsvg-text.c (rsvg_text_handler_characters): don't use
	pango_ft2_get_context() which is deprecated in Pango HEAD, but
	create the Pango context from the fontmap instead (bug #122121).

	* rsvg-path.c (rsvg_parse_path_do_cmd): fixed storage of
	reflection point in Q command which caused the next T command to
	create a wrong stroke (bug #122118).

2003-09-11  Sven Neumann  <sven@gimp.org>

	* gimp-plugin/svg.c: Sprinkled the code with const qualifiers.
	Fixed transfer of pixel data from pixbuf to pixel region. The
	old code was wrong for pixbufs with rowstride != width * bpp.

== librsvg 2.4.0 ==

2003-09-08  Alexander Larsson  <alexl@redhat.com>

	* configure.in: 
	* NEWS:
	version 2.4.0

2003-08-27  Dom Lachowicz <cinamod@hotmail.com>
