@@ -1,3 +1,12 @@
+2003-10-16  Sven Neumann  <sven@gimp.org>
+
+	* rsvg.c: fixed inline docs.
+
+	* doc/Makefile.am: ignore internal header files.
+
+	* doc/rsvg-sections.txt
+	* doc/tmpl/rsvg.sgml: added new functions.
+
 2003-09-23  Sven Neumann  <sven@gimp.org>
 
 	* rsvg.c (rsvg_start_svg): respect viewBox offsets by applying an
